--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   box-sizing: border-box;
   height: 100%;
-  max-width: 100%;
+  width: 100%;
 }
 
 .top-bar {
@@ -75,15 +75,15 @@ p {
 }
 
 .cell {
-  width: 124%;
+  width: 372px;
 }
 
 .in-password {
-  width: 124%;
+  width: 372px;
 }
 
 .gender {
-  width: 105%;
+  width: 372px;
 }
 
 .facebook-register {
